--- a/style-m3.css
+++ b/style-m3.css
@@ -1,8 +1,8 @@
 .square {
-  float: left;
-  width: 30%;
-  height: 0;
-  padding-bottom: 30%;
+  /* float: left; */
+  width: 120px;
+  height:  120px;
+  /* padding-bottom: 30%; */
   background-color: burlywood;
   margin: 20px;
   border-radius: 30px;
@@ -12,9 +12,11 @@
 }
 
 .container {
-  width: 600px;
+  width: 700px;
   margin: 0 auto;
-
+  display: flex;
+  align-items: center; 
+  justify-content: center
 }
 
 body {
@@ -24,15 +26,22 @@ body {
 h1 {
   color: white;
   text-align: center;
+  font-family: 'Anton', sans-serif;
+  font-size: 50px;
+}
+#colorDisplay{
+  font-size: 30px;
 }
 
 .message {
-  color: black;
+  color: rgb(255, 255, 255);
   text-align: center;
-  background-color: white;
+  background-color: #232323;
   display: block;
-  height: 20px;
-
+  height: 40px;
+  width: 200px;
+  font-family: 'Anton', sans-serif;
+  font-size: 20px;
 }
 
 #stripe {
@@ -42,17 +51,33 @@ h1 {
 }
 
 button {
+  margin-left: 30px;
+  margin-right: 30px;
   border: none;
   background: none;
   text-transform: uppercase;
   font-family: 'Courier New', Courier, monospace;
   height: 100%;
-  font-weight: 700;
-  color: rgb(42, 142, 209);
+  font-weight: 1000;
+  color: rgb(3, 3, 3);
   letter-spacing: 2px;
   font-size: inherit;
   transition: all 0.8s;
   -webkit-transition: all 0.8s;
   -moz-transition: all 0.8s;
   outline: none;
+}
+button:hover{
+color: aqua;
+font-size: 23px;
+}
+.botones{
+  height: 40px;
+  background: rgb(237,10,10);
+  background: linear-gradient(90deg, rgba(237,10,10,1) 0%, rgba(255,93,5,1) 19%, rgba(18,255,0,1) 35%, rgba(1,245,255,1) 53%, rgba(75,10,255,1) 75%, rgba(232,4,238,1) 86%, rgba(249,255,0,1) 100%); 
+  margin-bottom: 60px;
+  display: flex;
+  align-items: center; 
+  justify-content: center
+  
 }
